# scrappy-core

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  worker.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
